--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -13,8 +13,10 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.13.1",
+    "chart.js": "^4.5.1",
     "lucide-react": "^0.551.0",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
