--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.1",
     "chart.js": "^4.5.1",
     "lucide-react": "^0.551.0",
+    "multer": "^2.0.2",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
