update forgot+reset password

--- a/SERVER/.env
+++ b/SERVER/.env
@@ -1,3 +1,15 @@
+# --- Cấu hình Server & Database ---
 PORT=5000
 MONGO_URI=mongodb://127.0.0.1:27017/website_photocomerce
+
+# --- Cấu hình JWT (Bảo mật) ---
 JWT_SECRET=mysecretkey
+JWT_REFRESH_SECRET=RefreshSecretKey
+
+# --- Cấu hình Client (Frontend) ---
+# Dùng để tạo link reset password (ví dụ: http://localhost:5173/reset-password/...)
+CLIENT_URL=http://localhost:5173
+
+# --- Cấu hình Gửi Mail (Gmail) ---
+EMAIL_USER=nhutb2203520@student.ctu.edu.vn
+EMAIL_PASS=yezo pnlc yupb xqgi
